# AR

./: .gitignore  .gitmodules  README.md
catkin_ws/: 2023-11-03-03-18-35.bag  2023-11-03-03-42-57.bag  2023-11-03-03-43-13.bag  frames.gv  record.bag
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
catkin_ws/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
catkin_ws/devel/.private/first_package/: .catkin  local_setup.sh
catkin_ws/devel/.private/second_package/: .catkin  (+2 more)
catkin_ws/logs/second_package/: build.check.000.log.stderr
catkin_ws/src/arob_lab5/: package.xml  rrt_global_planner_plugin.xml
catkin_ws/src/arob_lab6/: CMakeLists.txt  package.xml
catkin_ws/src/arob_lab6/src/: arob6.rviz  drone_race.cpp  drone_race_p09.cpp  gates.txt  gates_hard.txt
catkin_ws/src/first_package/: launchfile.launch
catkin_ws/src/nd_local_planner/: CMakeLists.txt  REAME.txt  llc_nd_local_planner_plugin.xml  package.xml
catkin_ws/src/p09_arob_lab2/: CMakeLists.txt
catkin_ws/src/p09_arob_lab3/: CMakeLists.txt  arob_lab3.rviz  package.xml  targets.txt  targets2.txt  targets3.txt  targets4.txt  targets5.txt  targets6.txt
catkin_ws/src/p09_arob_lab4/: CMakeLists.txt  README.md  llc_local_planner_plugin.xml  package.xml
catkin_ws/src/second_package/: CMakeLists.txt  launchfile.launch
catkin_ws/src/tmp/: README.md  package.xml
catkin_ws/src/turtle_comunic/: README.md
(+78 files in other folders)
